# deadpool-actix-diesel

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.Alpine  docker-compose.yml  justfile
migrations/20250817124809_create_users/: up.sql
migrations/20250817180740_add_email/: up.sql
src/: main.rs  routes.rs
src/database/: models.rs  schema.rs
src/routes/: diesel.rs  postgres.rs
