[package]
name = "deadpool-actix-diesel"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
diesel = { version = "2.2.12", features = ["postgres"] }
diesel-async = { version = "0.6.1", features = ["deadpool", "postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
