[package]
name = "deadpool-actix-diesel"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
diesel = { version = "2.2.12", features = ["postgres"] }
diesel-async = { version = "0.6.1", features = ["deadpool", "postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"
dotenvy = "0.15.7"
